Config make command on pipeline

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
         go mod download
 
     - name: Build
-      run: go build -v .
+      run: make build
 
     - name: Test
-      run: go test ./...
+      run: make test
