--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,3 +31,11 @@ jobs:
 
     - name: Test
       run: make test
+
+    - uses: actions/checkout@master
+      with:
+        fetch-depth: 0
+    - name: Bump version and push tag
+      uses: mathieudutour/github-tag-action@v4.5
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
