--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,3 +39,9 @@ jobs:
       uses: mathieudutour/github-tag-action@v4.5
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+
+    - uses: actions/checkout@v2
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.29
