--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,6 +37,8 @@ jobs:
 
     - name: Test
       run: make test
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
 
     - uses: actions/checkout@master
       with:
