--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,7 +36,10 @@ jobs:
       run: make build
 
     - name: Test
-      run: make test && bash <(curl -s https://codecov.io/bash)
+      run: make test-coverage
+
+    - name: Push coverage
+      run: bash <(curl -s https://codecov.io/bash)
 
     - uses: actions/checkout@master
       with:
